Actualizare sectiune Descriere
Au fost adaugati si pasii necesare pentru rularea aplicatiei.